--- a/src/TendersApi.WebApi/Properties/launchSettings.json
+++ b/src/TendersApi.WebApi/Properties/launchSettings.json
@@ -24,7 +24,8 @@
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "httpPort": 32775
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
