--- a/src/TendersApi.WebApi/TendersApi.WebApi.csproj
+++ b/src/TendersApi.WebApi/TendersApi.WebApi.csproj
@@ -9,8 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TendersApi.Infrastructure\TendersApi.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
